RESOLVED FIXED274767
REGRESSION(279341@main): Minibrowser crashes if schema doesn't contain 'color-scheme'
https://bugs.webkit.org/show_bug.cgi?id=274767
Summary REGRESSION(279341@main): Minibrowser crashes if schema doesn't contain 'color...
Diego Pino
Reported 2024-05-27 23:15:56 PDT
In Playwright, after 279341@main, there are several tests failing with the following error: ``` <launching> /home/pwuser/playwright-browsers/browser_patches/webkit/pw_run.sh --inspector-pipe --user-data-dir=/tmp/playwright-test-DxSUjl about:blank <launched> pid=369127 [pid=369127][err] [pid=369127][err] (MiniBrowser:369136): WARNING : 06:06:45.951: 2D canvas acceleration not supported, webkit_settings_set_enable_2d_canvas_acceleration does nothing [pid=369127][err] [pid=369127][err] (MiniBrowser:369136): GLib-GIO-ERROR **: 06:06:46.350: Settings schema 'org.gnome.desktop.interface' does not contain a key named 'color-scheme' [pid=369127][err] /home/pwuser/playwright-browsers/browser_patches/webkit/pw_run.sh: line 24: 369136 Trace/breakpoint trap WEBKIT_FORCE_COMPLEX_TEXT="1" "$MINIBROWSER" "$@" [pid=369127] <process did exit: exitCode=133, signal=null> [pid=369127] starting temporary directories cleanup [pid=369127] finished temporary directories cleanup ``` It's necessary to check whether the schema contains 'color-scheme' before calling `g_settings_set_enum(interfaceSettings, "color-scheme")`.
Attachments
Diego Pino
Comment 1 2024-05-27 23:20:15 PDT
EWS
Comment 2 2024-05-28 01:55:55 PDT
Committed 279371@main (f22da2434a23): <https://commits.webkit.org/279371@main> Reviewed commits have been landed. Closing PR #29166 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.