REGRESSION(279341@main): Minibrowser crashes if schema doesn't contain 'color-scheme' https://bugs.webkit.org/show_bug.cgi?id=274767

Reviewed by Carlos Garcia Campos.

Check whether schema contains 'color-scheme' before attempting to
retrieve its value.

* Tools/MiniBrowser/gtk/main.c:
(setupDarkMode):

Canonical link: https://commits.webkit.org/279371@main